--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,6 @@ production:
   database: vocab_production
   username: vocab
   password: <%= ENV['VOCAB_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
