--- a/config/database.yml
+++ b/config/database.yml
@@ -49,9 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: vocab_production
-  username: vocab
-  password: <%= ENV['VOCAB_DATABASE_PASSWORD'] %>
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  database: <%= ENV['DB_NAME'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
